Estructura de cómo irán las soluciones

--- a/Tema 1/Ejercicios del tema I.tex
+++ b/Tema 1/Ejercicios del tema I.tex
@@ -110,35 +110,49 @@ Relación de ejercicios del tema I} % Subtitle
 	\item Estudia la convergencia uniforme en intervalos de la forma $[0,a]$ y $[a, +\infty[$,
 	donde $a > 0$, de la sucesión de funciones $\{f_n\}$ definidas para todo $x \geq 0$ por:
 	$$f_n(x) = \frac{2nx^2}{1+n^2x^4}$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Dado $\alpha \in \mathbb{R}$, consideremos la sucesión de funciones $\{f_n\}$, donde\\ %Salto de línea para no separar $f_n: [0,1]...$
 	$f_n: [0,1] \rightarrow \mathbb{R}$ es la función definida para todo $x \in [0,1]$ por:
 	$$f_n(x) = n^\alpha x(1-x^2)^n$$
 	¿Para qué valores de $\alpha$ hay convergencia uniforme en $[0,1]$?¿Para qué valores de
 	$\alpha$ hay convergencia uniforme en $[\rho,1]$, donde $\rho \in ]0,1[$?
-	
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
+			
 	\item Para cada $n \in \mathbb{N}$, sea $f_n: \left[0, \frac{\pi}{2}\right] \rightarrow \mathbb{R}$
 	la función dada por:
 	$$f_n(x) = n(\cos x)^n \sen x$$
 	Estudia la convergencia puntual de la sucesión de funciones $\{f_n\}$ y la convergencia
 	uniforme en los intervalos $[0, a]$ y $\left[a,\frac{\pi}{2}\right]$, donde $0 < a < \frac{\pi}{2}$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Para cada $n \in \mathbb{N}$ sea $f_n: ]0, \pi] \rightarrow \mathbb{R}$ la función dada por:
 	$$f_n(x) = \frac{\sen^2(nx)}{n\sen x} \quad (0 < x < \pi)$$
 	Estudia la convergencia puntual de la sucesión de funciones $\{f_n\}$, así como la convergencia
 	uniforme en los intervalos del tipo $[0, a]$, $[a,\pi]$ y $[a,b]$, donde $0 < a < b < \pi$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la convergencia puntual y uniforme de la sucesión de funciones $\{f_n\}$, donde
 	$f_n: \mathbb{R} \rightarrow \mathbb{R}$ está definida por:
 	$$f_n(x) = \sqrt[n]{1+x^{2n}} \quad (x \in \mathbb{R})$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la convergencia uniforme en intervalos de la forma $]-\infty, a]$, $[-a,a]$ y
 	$[a, +\infty[$, donde $a > 0$, de la sucesión de funciones $\{f_n\}$ definidas por:
 	$$f_n(x) = n\sen\left(\frac{x}{n}\right) \quad (x \in \mathbb{R})$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la convergencia uniformen en $\mathbb{R}^+_0$, de la sucesión de funciones $\{f_n\}$
 	definidas para todo $x \in \mathbb{R}^+_0$ por:
 	$$f_n(x) = \arctan\left(\frac{n+x}{1+nx}\right)$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 \end{enumerate}
 
 \section*{Series de funciones}
@@ -151,6 +165,8 @@ Relación de ejercicios del tema I} % Subtitle
 		\item uniformemente en semirrecas cerradas que no contienen al 0.
 		\item uniformemente en $\mathbb{R}^+_0$ si $\alpha > \frac{1}{2}$.
 	\end{enumerate}
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la convergencia puntual y uniforme de la serie $\sum f_n$, donde $f_n: \mathbb{R}
 	\rightarrow \mathbb{R}$ es la función dada por:
@@ -160,9 +176,13 @@ Relación de ejercicios del tema I} % Subtitle
 	Para $x > 0$ se tiene que
 	$$\int^{k+1}_{k} \frac{x}{1+t^2x^2} dt \leq f_k(x) = \int^{k+1}_{k} \frac{x}{1+k^2x^2} dt \leq
 	\int^{k}_{-k} \frac{x}{1+t^2x^2} dt$$}
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la convergencia puntual y uniforme de la serie $\sum f_n$, donde
 	$$f_n(x)=\frac{n^{n+1}}{n!} x^n e^{-nx} \quad (x \geq 0)$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item En cada uno de los siguientes ejercicios se especifica un conjunto $A \subset \mathbb{R}$ y,
 	para cada $n \in \mathbb{N}$, se define una función $f_n: A \rightarrow \mathbb{R}$. Se pide estudiar,
@@ -174,11 +194,15 @@ Relación de ejercicios del tema I} % Subtitle
 		\item $A = \mathbb{R} \setminus \mathbb{Z}^*$ y $f_n(x) = \displaystyle{\frac{1}{n^2-x^2}}$.
 		\item $A = \mathbb{R} \setminus \{-1,1\}$ y $f_n(x) = \displaystyle{\frac{x^{2n}}{1-x^{2n+1}}}$.
 	\end{enumerate}
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Estudia la derivabilidad de la función de Riemann $\xi: ]1, +\infty[ \rightarrow \mathbb{R}$, definida
 	para todo $x > 1$ por:
 	$$\displaystyle{\xi(x) = \sum^{\infty}_{n=1} \frac{1}{n^x}}$$
 	Justifica también que $\lim\limits_{x \rightarrow 1} \xi(x) = +\infty$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 \end{enumerate}
 
 \section*{Series de potencias}
@@ -193,13 +217,19 @@ Relación de ejercicios del tema I} % Subtitle
 		\item $a_n = a^{\sqrt{n}} \quad (a > 0)$
 		\item $\displaystyle{a_n = 1 + \frac{1}{2} + \dots + \frac{1}{n}}$
 	\end{enumerate}
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Calcula la función suma de las series de potencias $\displaystyle{\sum_{n \geq 0} (n+1) \frac{x^{3n}}{2^n}}$
 	y $\displaystyle{\sum_{n \geq 1} \frac{n(x+3)^{3n}}{2^n}}$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Expresa la función suma de las series de potencias $\displaystyle{\sum_{n \geq 1} nx^{n-1}}$ y
 	$\displaystyle{\sum_{n \geq 1} \frac{n}{n+1}x^n}$ por medio de funciones elementales y calcula el valor de
 	$\displaystyle{\sum^{\infty}_{n = 1} \frac{n}{2^n(n+1)}}$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Calcula el radio de convergencia y la suma de las series:
 	\begin{itemize}
@@ -207,12 +237,18 @@ Relación de ejercicios del tema I} % Subtitle
 		\item $\displaystyle{\sum_{n \geq 0} \frac{n^3}{n!}x^n}$
 		\item $\displaystyle{\sum_{n \geq 1} \frac{1}{1 + 2 + \dots + n}x^n}$
 	\end{itemize}
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Calcula la función suma de la serie de potencias $\displaystyle{\sum_{n \geq 1} \frac{1}{n(2n+1)}x^n}$ y
 	deduce el valor de las sumas de las series $\displaystyle{\sum_{n \geq 1} \frac{1}{n(2n+1)}}$ y
 	$\displaystyle{\sum_{n \geq 1} \frac{(-1)^n}{n(2n+1)}}$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Calcula la función suma de la serie de potencias $\displaystyle{\sum_{n \geq 1} \frac{x^{2n}}{n(2n-1)}}$.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Prueba que las funciones definidas por:
 	\begin{itemize}
@@ -220,9 +256,13 @@ Relación de ejercicios del tema I} % Subtitle
 		\item $\displaystyle{f(x) = \frac{e^x-1}{x}, \quad f(0) = 1}$
 	\end{itemize}
 	son de clase $\mathit{C}^\infty$ en su intervalo natural de definición.
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 	\item Calcula el desarrollo en serie de potencias centrada en un punto $a$ de la función:
 	$$\displaystyle{f(x) = \frac{2x^3-x^2+2x-7}{x^4-x^3-3x^2+x+2}}$$
+	\subsection*{Soluciones:}
+		\subsubsection*{Solución 1:}
 	
 \end{enumerate}
 
