Errata corregida En el ejercicio 6 de las sucesiones de funciones, faltaba un "-" en uno de los intervalos

--- a/Tema 1/Ejercicios del tema I.tex
+++ b/Tema 1/Ejercicios del tema I.tex
@@ -205,9 +205,9 @@ Relación de ejercicios del tema I} % Subtitle
 	\subsection*{Soluciones:}
 		\subsubsection*{Solución 1:}
 	
-	\item Estudia la convergencia uniforme en intervalos de la forma $]-\infty, a]$, $[-a,a]$ y
+	\item Estudia la convergencia uniforme en intervalos de la forma $]-\infty, -a]$, $[-a,a]$ y
 	$[a, +\infty[$, donde $a > 0$, de la sucesión de funciones $\{f_n\}$ definidas por:
-	$$f_n(x) = n\sen\left(\frac{x}{n}\right) \quad (x \in \mathbb{R})$$
+	$$f_n(x) = n \sen\left(\frac{x}{n}\right) \quad (x \in \mathbb{R})$$
 	\subsection*{Soluciones:}
 		\subsubsection*{Solución 1:}
 	
