--- a/Tema 1/Ejercicios del tema I.tex
+++ b/Tema 1/Ejercicios del tema I.tex
@@ -178,12 +178,75 @@ Relación de ejercicios del tema I} % Subtitle
   		
 	\item Dado $\alpha \in \mathbb{R}$, consideremos la sucesión de funciones $\{f_n\}$, donde\\ %Salto de línea para no separar $f_n: [0,1]...$
 	$f_n: [0,1] \rightarrow \mathbb{R}$ es la función definida para todo $x \in [0,1]$ por:
-	$$f_n(x) = n^\alpha x(1-x^2)^n$$
+	$$f_n(x) = n^\alpha x(1-x^2)^n$$ 
 	¿Para qué valores de $\alpha$ hay convergencia uniforme en $[0,1]$?¿Para qué valores de
 	$\alpha$ hay convergencia uniforme en $[\rho,1]$, donde $\rho \in ]0,1[$?
 	\subsection*{Soluciones:}
 		\subsubsection*{Solución 1:}
+		En primer lugar, veamos la convergencia puntual a $f \equiv 0$:
+		
+		Claramente, $f_n(x) \geq 0 \quad \forall x \in [0,1]$ y $f(0) = 0 = f(1)$.
+		
+		Ahora, veamos qué le pasa a la sucesión de funciones $\{f_n\}$ en $]0,1[:$
+		$$f(x) = \lim\limits_{n \rightarrow +\infty} f_n(x) =
+		\lim\limits_{n \rightarrow +\infty} n^\alpha x(1-x^2)^n =
+		x \lim\limits_{n \rightarrow +\infty} n^\alpha (1-x^2)^n = 0$$
+		ya que $1-x^2 \in ]0,1[ \Rightarrow |1-x^2| < 1 \Rightarrow 
+		\displaystyle{\lim\limits_{n \rightarrow +\infty} (1-x^2)^n} = 0.$
 			
+		Pasamos ahora a ver la convergencia uniforme, para ello, debemos que comprobar que
+  		$\lim\limits_{n \rightarrow +\infty} |f_n(x)-f(x)| = 0 \quad \forall x \in [0,1]$.
+  		
+  		Como tenemos que $f \equiv 0$ y $f_n(x) \geq 0 \quad \forall x \in [0,1]$,
+  		el límite queda $\lim\limits_{n \rightarrow +\infty} f_n(x) = 0 \quad \forall x \in [0,1]$
+  		
+  		Para cada $n \in \mathbb{N}$, vamos a calcular $x_n$ tal que $\displaystyle{f(x_n) =
+  		\max_{x \in	[0,1]}\{f(x)\}}$ ya que como tenemos que:
+  		$ \left. \begin{array}{c}
+  			f(x_n) \geq f_n(x) \quad \forall x \in [0,1]\\
+  			x_n \in [0,1]
+   		\end{array} \right\}
+   		\Rightarrow$ Basta con comprobar $\lim\limits_{n \rightarrow +\infty} f_n(x_n) = 0$
+
+   		Si queremos buscar un máximo, como $f_n(x)$ es claramente derivable por ser composición
+   		de funciones derivables, basta con calcular los puntos que anulan la derivada:
+   		$$f'(x) = n^\alpha (1-x^2)^n + n^\alpha \cdot x \cdot n (1-x^2)^{n-1} (-2x) =  
+   		n^\alpha (1-x^2)^{n-1} \cdot [1-x^2(1+2n)] $$
+   		$$f'(x) = 0 \Leftrightarrow
+   		\left\{\begin{array}{c}
+  			1-x^2 = 0 \Rightarrow x = 1\\
+   		  	1-x^2(1+2n) = 0 \Rightarrow \displaystyle{x = \frac{1}{\sqrt{1+2n}} = x_n}
+   		\end{array}\right.$$
+  		
+  		De estos dos candidatos, descartamos $x = 1$ ya que $f_n(1) = 0$, $f_n(x) \geq 0$ y
+  		$f_n \not \equiv 0$, y como $f'(]0,x_n[) \subset \mathbb{R}^+$ y $f'(]x_n, 1[)
+  		\subset \mathbb{R}^-$, se tiene que $x_n$ es el máximo que buscábamos.
+  		
+  		Claramente, $\lim\limits_{n \rightarrow +\infty} f_n(x_n) = \displaystyle{
+  		\lim\limits_{n \rightarrow +\infty}	n^\alpha \frac{1}{\sqrt{1+2n}} 
+  		\left(1-\left(\frac{1}{\sqrt{1+2n}}\right)^2\right)^n} = \displaystyle{
+  		\lim\limits_{n \rightarrow +\infty}	n^\alpha \frac{1}{\sqrt{1+2n}}
+  		\left(1-\frac{1}{1+2n}\right)^n} = \displaystyle{\lim\limits_{n \rightarrow +\infty}
+  		n^\alpha \frac{1}{\sqrt{1+2n}} \left(\frac{2n}{1+2n}\right)^n} = \displaystyle{
+  		\lim\limits_{n \rightarrow +\infty}	\frac{n^\alpha}{\sqrt{1+2n}} \cdot 
+ 		\exp \left(\lim\limits_{n \rightarrow +\infty} n \cdot \left(\frac{2n}{1+2n}-1\right)\right)}
+ 		=\\ \displaystyle{ \lim\limits_{n \rightarrow +\infty}	\frac{n^\alpha}{\sqrt{1+2n}} \cdot 
+ 		\exp \left(\lim\limits_{n \rightarrow +\infty} \frac{n}{1+2n}\right)} = \displaystyle{
+  		\lim\limits_{n \rightarrow +\infty}	\frac{n^\alpha}{\sqrt{1+2n}} \cdot e^{\frac{1}{2}}}
+ 		= \\ \displaystyle{e^{\frac{1}{2}} \cdot \lim\limits_{n \rightarrow +\infty}
+ 		\sqrt{\frac{n^{2 \alpha}}{1+2n}}} = \displaystyle{\sqrt{\frac{e}{2}} \cdot
+ 		\sqrt{\lim\limits_{n \rightarrow +\infty} n^{2 \alpha - 1}}}$
+ 		
+ 		Dicho límite, se anula $\Leftrightarrow \lim\limits_{n \rightarrow +\infty} n^{2 \alpha - 1} = 0
+ 		\Leftrightarrow 2 \alpha - 1 < 0 \Leftrightarrow \alpha < \displaystyle{\frac{1}{2}}$
+  		
+  		Por tanto, $f_n(x)$ converge uniformemente en $[0,1] \Leftrightarrow \alpha < \displaystyle{\frac{1}{2}}$
+  		
+  		Dado $\rho \in ]0,1[$, $\exists n_0 \quad / \quad x_{n_0} < \rho \Rightarrow \forall n > n_0
+  		\quad x_n < \rho \Rightarrow \\ \displaystyle{\max_{x \in [\rho,1]} \{|f_n(x) - f(x)|\} } = 
+  		\displaystyle{\max_{x \in [\rho,1]} \{f_n(x)\}} = f(\rho) \rightarrow 0 \Rightarrow f_n(x)$
+  		converge uniformemente en $[\rho,1] \quad \forall \alpha \in \mathbb{R}$.
+
 	\item Para cada $n \in \mathbb{N}$, sea $f_n: \left[0, \frac{\pi}{2}\right] \rightarrow \mathbb{R}$
 	la función dada por:
 	$$f_n(x) = n(\cos x)^n \sen x$$
@@ -192,10 +255,10 @@ Relación de ejercicios del tema I} % Subtitle
 	\subsection*{Soluciones:}
 		\subsubsection*{Solución 1:}
 	
-	\item Para cada $n \in \mathbb{N}$ sea $f_n: ]0, \pi] \rightarrow \mathbb{R}$ la función dada por:
+	\item Para cada $n \in \mathbb{N}$ sea $f_n: ]0, \pi[ \rightarrow \mathbb{R}$ la función dada por:
 	$$f_n(x) = \frac{\sen^2(nx)}{n\sen x} \quad (0 < x < \pi)$$
 	Estudia la convergencia puntual de la sucesión de funciones $\{f_n\}$, así como la convergencia
-	uniforme en los intervalos del tipo $[0, a]$, $[a,\pi]$ y $[a,b]$, donde $0 < a < b < \pi$.
+	uniforme en los intervalos del tipo $]0, a]$, $[a,\pi[$ y $[a,b]$, donde $0 < a < b < \pi$.
 	\subsection*{Soluciones:}
 		\subsubsection*{Solución 1:}
 	
