Añadido un autor

--- a/Tema 1/Ejercicios del tema I.tex
+++ b/Tema 1/Ejercicios del tema I.tex
@@ -94,7 +94,7 @@
 \title{\textbf{Análisis Matemático II}\\ % Title
 Relación de ejercicios del tema I} % Subtitle
 
-\author{\textsc{Óscar Bermúdez} % Author
+\author{\textsc{Óscar Bermúdez, José Pimentel} % Author
 \\{\textit{Universidad de Granada}}} % Institution
 
 \date{\today} % Date
